clusters/managed/devbench/touca/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app touca
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://touca.trusted.nirmalhk7.com"
    gethomepage.dev/group: Devbench
    gethomepage.dev/description: "Regression testing"
    gethomepage.dev/icon: https://touca.io/docs/img/touca_logo_bg.png
    gethomepage.dev/app: *app # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Touca
    gethomepage.dev/weight: "60"
    gethomepage.dev/pod-selector: "app=touca-touca"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`touca.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: touca-touca
          port: 8080
